tensors & tuples for asani-scala