@@ -37,16 +37,25 @@ ThisBuild / credentials += Credentials(
   System.getenv("GITHUB_TOKEN")
 )
 
+Test / fork := true
+Test / javaOptions += "--add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED"
+
 val testing = Seq(
-  "org.scalatest" %% "scalatest" % V.scalatest % Test)
+  "org.scalatest" %% "scalatest" % V.scalatest % Test
+)
 
 val arrow = Seq(
   "org.apache.arrow" % "arrow-vector" % V.arrow,
   "org.apache.arrow" % "flight-core" % V.arrow
 )
 
+val jsoniter = Seq(
+  "com.github.plokhotnyuk.jsoniter-scala" %% "jsoniter-scala-core" % V.jsoniter,
+  "com.github.plokhotnyuk.jsoniter-scala" %% "jsoniter-scala-macros" % V.jsoniter
+)
+
 lazy val root = (project in file("."))
   .settings(
     name := "asani-scala",
-    libraryDependencies ++= arrow ++ testing
+    libraryDependencies ++= arrow ++ jsoniter ++ testing
   )
